--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dougskinner/node-server-logger",
+    "name": "logophile",
     "version": "1.1.2",
     "description": "A basic logging utility based on winston",
     "main": "src/index.js",
