Remove node modules from git

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
-    "extends": ["@dougskinner/eslint-config"],
+    "extends": ["prettier", "eslint:recommended"],
+    "plugins": ["prettier"],
+    "rules": {
+        "prettier/prettier": ["error"],
+        "import/no-anonymous-default-export": "off"
+    },
     "env": {
         "node": true
     }
