--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
         "prettier/prettier": ["error"],
         "import/no-anonymous-default-export": "off"
     },
+    "parserOptions": {
+        "ecmaVersion": 2021
+    },
     "env": {
-        "node": true
+        "node": true,
+        "es6": true
     }
 }
