--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
     "name": "logophile",
     "version": "1.2.0",
     "description": "A basic logging utility based on winston",
-    "main": "src/index.js",
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
     "scripts": {
-        "check": "eslint src"
+        "lint": "eslint ./src --ext .ts",
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/doug-skinner/node-server-logger.git"
+        "url": "git+https://github.com/doug-skinner/logophile.git"
     },
     "author": "Doug Skinner",
     "license": "ISC",
     "devDependencies": {
-        "eslint": "^8.17.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "node": "^16.14.2",
-        "prettier": "^2.6.2"
+        "@types/node": "^18.11.18",
+        "@typescript-eslint/eslint-plugin": "^5.49.0",
+        "@typescript-eslint/parser": "^5.49.0",
+        "eslint": "^8.32.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.8.3",
+        "typescript": "^4.9.4"
     },
     "dependencies": {
-        "winston": "^3.2.1"
+        "winston": "^3.8.2"
     }
 }
